# epub_transliterator

./: .gitignore  Cargo.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
dicts/: elder_futhark.yaml
epub_transliterator/: Cargo.toml
epub_transliterator/src/: main.rs
epub_transliterator_lib/: Cargo.toml
epub_transliterator_lib/src/: lib.rs
epub_transliterator_lib/src/content_handler/: mod.rs  reader.rs  rewriter.rs
epub_transliterator_lib/src/pandoc_wrapper/: mod.rs
epub_transliterator_lib/src/transliteration_dictionary/: mod.rs
epub_transliterator_lib/src/transliterator/: mod.rs
