[package]
name = "epub_transliterator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
epub_transliterator_lib = { path = "../epub_transliterator_lib" }
