[package]
name = "epub_transliterator_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0.57"
lol_html = "0.3.1"
rayon = "1.5.3"
serde = "1.0.140"
serde_json = "1.0.82"
serde_yaml = "0.8.26"